# pytypeinputweb

./: CHANGELOG.md  README.md  pyproject.toml
example/: example_bool.py  example_color.py  example_date.py  example_dropdown.py  example_files.py  example_float.py  example_int.py  example_str.py  example_time.py  show.py
pytypeinputweb/: __init__.py
pytypeinputweb/static/: bool.js  choice.js  color.js  core.js  date.js  field.js  file.js  float.js  int.js  str.js  time.js
pytypeinputweb/static/css/: base.css  color.css  dropdwon.css  field.css  file.css  form.css  input.css  list.css  number.css  optional.css  slider.css  str.css  submit.css
